<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Abre menu</string>
    <string name="navigation_drawer_close">Fecha menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="ausentes">Ausentes</string>
    <string name="presentes">Presentes</string>
    <string name="todos">Todos</string>
    <string name="nao_confirmados">Não Confirmados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome:</string>
    <string name="confirmacao">Confirmação</string>
    <string name="gravar">Gravar</string>
    <string name="ausente">Ausente</string>
    <string name="presente">Presente</string>
    <string name="nao_confirmado">Não Confirmado</string>
    <string name="nome_do_convidado">Nome do Convidado…</string>
    <string name="valida_nome">O campo NOME deve ser informado!</string>
    <string name="remocao_convidado">Remoção de Convidado</string>
    <string name="remocao_convido_msg">Deseja realmente remover o convidado?</string>
    <string name="bt_sim">Sim</string>
    <string name="bt_nao">Não</string>
    <string name="exclusao_ok">Processo de exclusão realizado com sucesso!</string>
    <string name="exclusao_erro">Erro ao executar processo de exclusão!</string>
    <string name="gravacao_ok">Processo de gravação realizado com sucesso!</string>
    <string name="gravacao_erro">Erro ao executar processo de gravação!</string>
    <string name="total">Total</string>
    <string name="imagem_exclusao">imagem para exclusão</string>
</resources>
